# beamer_gen

./: .gitignore  CHANGELOG.md  LICENSE  README  README.md  beamer_gen.py  pyproject.toml  setup.cfg  setup.py
beamer_gen/: __init__.py  beamer_gen.py
tests/: .gitignore  example1.stub
