[metadata]
name = beamer_gen
version = attr: beamer_gen.__version__
description = Preprocessor to generate LaTeX/beamer files
long_description = file: README.md
long_description_content_type = text/markdown
keywords = LaTeX beamer generator markup
author = Francis Colas
author-email = francis.colas@inria.fr
license = BSD
url = https://github.com/fcolas/beamer_gen
platforms = any
classifiers =
        Development Status :: 5 - Production/Stable
        License :: OSI Approved :: BSD License
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3 :: Only
        Programming Language :: Python :: 3.4
        Programming Language :: Python :: 3.5
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        Topic :: Text Processing :: Markup :: LaTeX

[options]
python_requires = >= 3.4
packages = find:

[options.entry_points]
console_scripts =
    beamer_gen = beamer_gen:main
